vest-dsl/test/bad/choice_ints_variant_overlap3.vest
t = enum {
  A = 1,
  B = 2,
  C = 3,
  ...
}

fmt(@tag: t) = choose(@tag) {
  1 => u8,
  2 => u32,
  2..10 => u32,
}
